# storage/internal/availableservers/availableservers.go
@@ -7,8 +7,9 @@ import (
 )
 
 type AvailableServers struct {
-	servers     sync.Map
+	servers     []string
 	expressions *expressionstorage.ExpressionStorage
+	mu          sync.Mutex
 }
 
 func New(expressions *expressionstorage.ExpressionStorage) *AvailableServers {
@@ -18,29 +19,41 @@ func New(expressions *expressionstorage.ExpressionStorage) *AvailableServers {
 }
 
 func (a *AvailableServers) Add(server string) {
-	a.servers.Store(server, true)
+	a.mu.Lock()
+	defer a.mu.Unlock()
+	for _, s := range a.servers {
+		if s == server {
+			return
+		}
+	}
+	a.servers = append(a.servers, server)
 }
 
 func (a *AvailableServers) Remove(server string) {
-	a.servers.Delete(server)
+	a.mu.Lock()
+	defer a.mu.Unlock()
+	for i, s := range a.servers {
+		if s == server {
+			a.servers = append(a.servers[:i], a.servers[i+1:]...)
+			break
+		}
+	}
 }
 
 func (a *AvailableServers) GetAll() []string {
-	servers := make([]string, 0)
-	a.servers.Range(func(key, _ interface{}) bool {
-		servers = append(servers, key.(string))
-		return true
-	})
-	return servers
+	a.mu.Lock()
+	defer a.mu.Unlock()
+	return a.servers
 }
 
-func (a *AvailableServers) GetOperations(server string) []db.Expression {
-	expressions := a.expressions.GetAll()
-	operations := make([]db.Expression, 0)
-	for _, expression := range expressions {
-		if expression.Servername == server {
-			operations = append(operations, expression)
+func (a *AvailableServers) GetExpressions(server string) []db.Expression {
+	res := make([]db.Expression, 0)
+	a.mu.Lock()
+	defer a.mu.Unlock()
+	for _, s := range a.servers {
+		if s == server {
+			res = append(res, a.expressions.GetByServer(s)...)
 		}
 	}
-	return operations
+	return res
 }
